# RxOnly

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
deploy/: README.md  cloudflare-dyndns.sh  cloudflare-sync-ips.sh  gunicorn.conf.py.example  nginx.conf.example  rxonly-collector.service.example  rxonly-www.service.example
rxonly/: __init__.py  config-sample.json  config.py
rxonly/collector/: __init__.py  __main__.py
rxonly/db/: __init__.py  schema.sql
rxonly/web/: __init__.py  db.py
rxonly/web/routes/: __init__.py  dashboard.py
rxonly/web/routes/api/: __init__.py  channels.py  direct_messages.py  messages.py  nodes.py  stats.py
rxonly/web/static/css/: rxonly-E0DAAD3B.min.css  rxonly-MQI3QDNV.min.css  rxonly.css
rxonly/web/static/img/: manifest.json
rxonly/web/static/js/: messages.js  nodes.js  rxonly-7EP7CFPP.min.js  rxonly-85EDDF5A.min.js  rxonly.js  temp.js  views.js
rxonly/web/templates/: index.html
rxonly/web/templates/partials/: dashboard.html  dashboard_template.html  message_detail.html  message_item.html  messages_list.html  node_detail.html
scripts/: build_assets.py  run_collector.py
