[project]
name = "RxOnly"
version = "0.5.0"
description = "A read-only web interface for monitoring Meshtastic nodes and messages."
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "epohs" }
]
urls = { 
    "Homepage" = "https://github.com/epohs/RxOnly", 
    "Repository" = "https://github.com/epohs/RxOnly" 
}
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-compress>=1.23",
    "gunicorn>=25.0.3",
    "meshtastic",
    "pubsub",
    "sqlite-utils",
]
